# rus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yaml
src/: data.rs  lex.rs  lib.rs  main.rs  parser.rs
test/integration/: complete_program.rs
test/lexer/: basic_tokens.rs  number_parsing.rs  string_parsing.rs
test/parser/: algebraic_effects_parsing.rs  basic_parsing.rs  declaration_parsing.rs  effect_groups_parsing.rs
