[package]
name = "rus"
version = "0.1.0"
edition = "2024"
authors = ["HaiMan <alexredskaber@gmail.com>"]
description = "A Rust compiler written in Rust"
repository = "https://github.com/haiman/rus"
readme = "README.md"
license = "Apache License 2.0"
keywords = ["compiler", "lexer", "parser"]
default-run = "rus"
documentation = "https://docs.rs/rus"
categories = ["compilers"]

[dependencies]

[lib]
name = "rus"
path = "src/lib.rs"

[[bin]]
name = "rus"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true


# [dev-dependencies]


# [features]


# [workspace]


# [profile.test]


# [profile.bench]


# [package.metadata.docs.rs]
