[package]
name = "rus"
version = "0.1.0"
edition = "2024"
authors = ["HaiMan <alexredskaber@gmail.com>"]
description = "A compiler for the Rus language"
repository = "https://github.com/haiman/rus"
readme = "README.md"
license = "Apache License 2.0"
keywords = ["compiler", "lexer", "parser"]
default-run = "rus"
documentation = "https://docs.rs/rus"
categories = ["compilers"]

[dependencies]
phf = { version = "0.12.1", features = ["macros"] }

[lib]
name = "rus"
path = "src/lib.rs"

[[test]]
name = "lexer_tests"
path = "test/lexer/basic_tokens.rs"

[[test]]
name = "number_parsing_tests"
path = "test/lexer/number_parsing.rs"

[[test]]
name = "string_parsing_tests"
path = "test/lexer/string_parsing.rs"

[[test]]
name = "parser_basic_tests"
path = "test/parser/basic_parsing.rs"

[[test]]
name = "parser_declaration_tests"
path = "test/parser/declaration_parsing.rs"

[[test]]
name = "parser_algebraic_effects_tests"
path = "test/parser/algebraic_effects_parsing.rs"

[[test]]
name = "parser_effect_groups_tests"
path = "test/parser/effect_groups_parsing.rs"

[[test]]
name = "integration_tests"
path = "test/integration/complete_program.rs"

[[bin]]
name = "rus"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true


# [dev-dependencies]


# [features]


# [workspace]


# [profile.test]


# [profile.bench]


# [package.metadata.docs.rs]
